# gitting

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  ROADMAP.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/commands/: release.md  relire.md
.github/workflows/: release.yml
docs/adr/: 0001-diff-rendering-architecture.md  0002-update-and-distribution-strategy.md  0003-resizable-review-sidebar.md  0004-partial-hunk-line-staging.md
docs/reference/: design-system.md  gix-status-api.md  partial-staging-plan.md  tauri2-window-options.md
src/: CLAUDE.md  main.tsx
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/git/: diff.rs  error.rs  hunk_patch.rs  index_write.rs  mod.rs  partial.rs  repo.rs  status.rs  test_support.rs
src/app/: app.tsx  error-boundary.tsx  theme-provider.tsx  titlebar.tsx  window-controls.tsx  window-resizers.tsx
src/components/: accent-picker.tsx  app-version.test.tsx  app-version.tsx  appearance-toggle.tsx  check-for-updates-button.tsx  icons.tsx  update-notice.tsx
src/features/repo/: repo-picker.tsx
src/features/review/: change-kind.test.ts  change-kind.ts  completion-beat.tsx  file-filter.test.ts  file-filter.ts  file-row.test.tsx  file-row.tsx  file-tree.test.ts  file-tree.ts  file-type-icon.tsx  repo-menu.tsx  resize-utils.test.ts  resize-utils.ts  review-progress.tsx  review-stats.test.ts  review-stats.ts  review-view.tsx  row-context.tsx  row-end.tsx  sidebar-filter.tsx  sidebar-resizer.test.tsx  sidebar-resizer.tsx  sidebar.tsx  status-glyph.tsx  status-section.test.tsx  status-section.tsx  tree-view.tsx  use-sidebar-keyboard.test.tsx  use-sidebar-keyboard.ts  use-sticky-head.ts  validate-button.test.tsx  validate-button.tsx  view-mode-toggle.tsx
src/features/review/diff/: diff-line.tsx  diff-panel.tsx  diff-view.test.tsx  diff-view.tsx  flatten-hunks.test.ts  flatten-hunks.ts  lang.test.ts  lang.ts  tokenize.test.ts  tokenize.ts  use-highlighter.ts
src/lib/: diff-stats.test.ts  diff-stats.ts  error.ts  git.ts  highlighter.ts  hunk-fingerprint.test.ts  hunk-fingerprint.ts  path.test.ts  path.ts  runtime.ts  storage.ts  updater.ts  window.ts
src/stores/: use-diff-store.test.ts  use-diff-store.ts  use-repo-store.test.ts  use-repo-store.ts  use-sidebar-store.test.ts  use-sidebar-store.ts  use-stats-store.test.ts  use-stats-store.ts  use-theme-store.test.ts  use-theme-store.ts  use-update-store.test.ts  use-update-store.ts  use-view-store.test.ts  use-view-store.ts
src/styles/: global.css
src/test/: setup.ts
