[package]
name = "gitting"
version = "0.2.1"
description = "Desktop app for reviewing local git changes"
edition = "2021"
# Toolchain: latest stable Rust (>= 1.85 for gix) — see ../rust-toolchain.toml.

[lib]
# `name` must match the `app_lib::run()` call in src/main.rs.
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The git layer (gix backend + thiserror error type) is added when the
# status/diff/stage commands are implemented — see CLAUDE.md.

# In-app updater (Tauri updater plugin) — desktop only, kept off mobile targets.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
