[package]
name = "gitting"
version = "0.6.0"
description = "Desktop app for reviewing local git changes"
edition = "2021"
# Toolchain: latest stable Rust (>= 1.85 for gix) — see ../rust-toolchain.toml.

[lib]
# `name` must match the `app_lib::run()` call in src/main.rs.
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
# Required at the crate root by `tauri::generate_context!`; also asserts the
# serde wire shape of the diff types in the git-layer unit tests.
serde_json = "1"

# Git layer: gix (gitoxide) reads — the `status` feature pulls in dirwalk/index/
# blob-diff; `parallel` enables the multi-threaded worktree walk and makes
# `gix::Repository: Send`. Default features stay on for a C-free zlib backend.
gix = { version = "0.80", features = ["status", "parallel"] }
thiserror = "2"

# Folder picker for selecting the repository to review.
tauri-plugin-dialog = "2"

# In-app updater (Tauri updater plugin) — desktop only, kept off mobile targets.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# WebKitGTK handle for enabling smooth wheel scrolling on Linux (off by default in
# WebKitGTK, which makes the WebView scroll in coarse steps). Version + feature must
# track the `webkit2gtk` that wry/Tauri resolve, so `PlatformWebview::inner()` hands
# back the same `WebView` type. WebView2 (Windows) already scrolls smoothly.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2", features = ["v2_40"] }

[dev-dependencies]
# Throwaway on-disk git repositories for the git-layer unit tests.
tempfile = "3"
